Addding TailwindCss to project

--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "homepage": "https://github.com/officialcody/Namaste-react-practice#readme",
   "dependencies": {
     "axios": "^1.6.8",
+    "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "tailwindcss": "^3.4.3"
   },
   "browserslist": [
     "last 10 Chrome versions"
