--- a/package.json
+++ b/package.json
@@ -33,7 +33,14 @@
     "last 10 Chrome versions"
   ],
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@testing-library/dom": "^10.2.0",
+    "@testing-library/react": "^16.0.0",
+    "babel-jest": "^29.7.0",
     "buffer": "^6.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.12.0",
     "process": "^0.11.10"
   }
