--- a/package.json
+++ b/package.json
@@ -34,9 +34,12 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.24.7",
-    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "@parcel/babel-preset-env": "^2.12.0",
     "@testing-library/dom": "^10.2.0",
+    "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
     "babel-jest": "^29.7.0",
     "buffer": "^6.0.3",
     "jest": "^29.7.0",
